--- a/index.html
+++ b/index.html
@@ -3,34 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>English Stone AI Chat</title>
+    <title>子供英会話教室イングリッシュストーン: ペブル先生と通話</title>
+    <!-- Tailwind CSS CDN for easy styling -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* This CSS makes sure the chat widget takes up the whole page */
-        body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden; /* Hide scrollbars */
+        /* Custom styles for the Inter font and overall aesthetics */
+        body {
+            font-family: 'Inter', sans-serif;
+            /* Set the background image for Professor Pebble */
+            background-image: url('https://content-fetcher.google-genai.com/api/files/image_c869d9.png-721607df-9398-4655-89e4-a3c93292b267'); /* Professor Pebble's actual background image */
+            background-size: cover; /* Cover the entire viewport */
+            background-position: center; /* Center the background image */
+            background-repeat: no-repeat; /* Do not repeat the image */
+            background-attachment: fixed; /* Keep the background fixed when scrolling */
+            background-color: #e0e0e0; /* Fallback background color */
+        }
+        /* Ensure the Voiceflow widget is visible and not hidden by other elements */
+        .voiceflow-chat-widget {
+            z-index: 9999; /* High z-index to ensure it's on top when opened */
         }
     </style>
-</head>
-<body>
-    <script type="text/javascript">
-      (function(d, t) {
-          var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
-          v.onload = function() {
-            window.voiceflow.chat.load({
-              verify: { projectID: '686a681c7aa350d9b6d33e22' },
-              url: 'https://general-runtime.voiceflow.com',
-              versionID: 'production',
-              voice: {
-                url: "https://runtime-api.voiceflow.com"
-              }
-            });
-          }
-          v.src = "https://cdn.voiceflow.com/widget-next/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
-      })(document, 'script');
+
+    <!-- Google Analytics Global Site Tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6P1WP8QRRP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-6P1WP8QRRP'); // Your Google Analytics Measurement ID
     </script>
-    </body>
+</head>
+<body class="flex flex-col items-center justify-center min-h-screen p-4">
+    <div class="max-w-2xl w-full bg-white rounded-xl shadow-lg p-8 md:p-12 text-center bg-opacity-90">
+        <h1 class="text-4xl md:text-5xl font-extrabold text-blue-800 mb-4">
+            子供英会話教室イングリッシュストーンへようこそ！
+        </h1>
+        <p class="text-lg md:text-xl text-gray-700 mb-6" id="statusMessage">
+            英語の練習をする準備はできましたか？
+        </p>
+        <p class="text-md md:text-lg text-gray-600 mb-8">
+            右下のチャットアイコンをクリックして、<span class="font-semibold text-purple-700">ペブル先生</span>と会話を始めましょう。彼はあなたを助ける準備ができています！
+        </p>
+        <p class="text-sm text-gray-500 mt-4">
+            最高の体験のために、マイクが有効になっていることを確認してください。
+        </p>
+    </div>
+
+    <!-- Voiceflow Chatbot Embed Code for Professor Pebble -->
+    <script type="text/javascript">
+        (function(d, t) {
+            var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
+            v.onload = function() {
+                // Initialize the Voiceflow chat widget for Professor Pebble
+                window.voiceflow.chat.load({
+                    verify: { projectID: '686b4a197aa350d9b6d3a3d8' }, // Professor Pebble's Voiceflow Project ID
+                    url: 'https://general-runtime.voiceflow.com', // Voiceflow runtime URL
+                    versionID: 'production', // Use the production version of his agent
+                    voice: {
+                        url: "https://runtime-api.voiceflow.com" // Voice API URL for voice interactions
+                    }
+                });
+            }
+            // Set the source and type for the Voiceflow widget bundle
+            v.src = "https://cdn.voiceflow.com/widget-next/bundle.mjs";
+            v.type = "text/javascript";
+            // Insert the script into the document
+            s.parentNode.insertBefore(v, s);
+        })(document, 'script');
+
+        // Update the status message to indicate the chatbot should be visible
+        document.addEventListener('DOMContentLoaded', () => {
+            const statusMessageElement = document.getElementById('statusMessage');
+            if (statusMessageElement) {
+                statusMessageElement.textContent = '英語の練習をする準備はできましたか？右下のチャットアイコンをクリックして、ペブル先生と会話を始めましょう。彼はあなたを助ける準備ができています！';
+            }
+        });
+    </script>
+</body>
 </html>
