--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
     </style>
 
     <!-- Google Analytics Global Site Tag (gtag.js) -->
+    <!-- CORRECTED: Using G-6P1WP8QRRP -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6P1WP8QRRP"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-6P1WP8QRRP'); // Your Google Analytics Measurement ID
+      gtag('config', 'G-6P1WP8QRRP'); // CORRECTED: Using G-6P1WP8QRRP
     </script>
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen p-4">
